[package]
name        = "cw-asset"
description = "Helper library for interacting with Cosmos assets (native coins and CW20 tokens)"
version     = "4.0.0"
authors     = ["Larry Engineer <larry@delphidigital.io>"]
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/mars-protocol/cw-asset"

[dependencies]
cosmwasm-schema = { version = "3.0.4" }
cosmwasm-std    = { version = "3.0.4" }
cw-storage-plus = { version = "3.0.1" }
cw-address-like = { path = "../cw-plus-plus/packages/address-like" }
cw20            = { path = "../cw-plus/packages/cw20" }
thiserror       = { version = "1.0.69" }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
