[package]
name        = "cw-asset"
description = "Helper library for interacting with Cosmos assets (native coins and CW20 tokens)"
version     = "4.0.0"
authors     = ["Larry Engineer <larry@delphidigital.io>"]
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/mars-protocol/cw-asset"

[dependencies]
cosmwasm-schema = { git = "https://github.com/permissionlessweb/cosmwasm", branch = "mvp" }
cosmwasm-std = { git = "https://github.com/permissionlessweb/cosmwasm", branch = "mvp" }
cw-storage-plus = { git = "https://github.com/permissionlessweb/cw-storage-plus", branch = "mvp" }
cw-address-like = { git = "https://github.com/permissionlessweb/cw-plus-plus", branch = "main" }
cw20 = { git = "https://github.com/permissionlessweb/cw-plus", branch = "main" }
thiserror       = { version = "1.0.69" }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
