[package]
name        = "cw-asset"
description = "Helper library for interacting with Cosmos assets (native coins and CW20 tokens)"
version     = "4.0.0"
authors     = ["Larry Engineer <larry@delphidigital.io>"]
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/mars-protocol/cw-asset"

[dependencies]
cosmwasm-schema = { path = "../ZK/cw/zk-cosmwasm/packages/schema" }
cosmwasm-std = { path = "../ZK/cw/zk-cosmwasm/packages/std" }
cw-storage-plus = { path = "../ZK/cw/zk-storage-plus" }
cw-address-like = { path = "../ZK/cw/zk-plus-plus/packages/address-like" }
cw20 = { path = "../cw-plus/packages/cw20" }
thiserror       = { version = "1.0.69" }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
